--- a/style/styles.css
+++ b/style/styles.css
@@ -60,7 +60,6 @@ a:focus {
 #sidebar {
   min-width: 250px;
   max-width: 250px;
-  /* background: #7386d5; */
   background: #aab895;
   color: #fff;
   transition: all 0.6s cubic-bezier(0.945, 0.02, 0.27, 0.665);
@@ -74,8 +73,8 @@ a:focus {
 
 #sidebar .sidebar-header {
   padding: 20px;
-  /* background: #6d7fcc; */
-  background: #849962;
+  background: #195905;
+  /* background: #849962; */
 }
 
 #sidebar ul.components {
@@ -94,7 +93,6 @@ a:focus {
   display: block;
 }
 #sidebar ul li a:hover {
-  /* color: #7386d5; */
   color: #aab895;
   background: #fff;
 }
@@ -102,8 +100,8 @@ a:focus {
 #sidebar ul li.active > a,
 a[aria-expanded="true"] {
   color: #fff;
-  /* background: #6d7fcc; */
-  background: #849962
+  background: #195905;
+  /* background: #849962 */
 }
 
 a[data-toggle="collapse"] {
@@ -121,8 +119,8 @@ a[data-toggle="collapse"] {
 ul ul a {
   font-size: 0.9em !important;
   padding-left: 30px !important;
-  /* background: #6d7fcc; */
-  background: #849962;
+  /* background: #849962; */
+  background: #195905;
 }
 
 ul.CTAs {
