--- a/style/styles.css
+++ b/style/styles.css
@@ -9,6 +9,11 @@ body {
   background-color: #eaede6;
 }
 
+.roundimg{
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+}
 p {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
@@ -60,7 +65,8 @@ a:focus {
 #sidebar {
   min-width: 250px;
   max-width: 250px;
-  background: #aab895;
+  background: #195905;
+  /* background: #aab895; */
   color: #fff;
   transition: all 0.6s cubic-bezier(0.945, 0.02, 0.27, 0.665);
   transform-origin: bottom left;
@@ -79,7 +85,7 @@ a:focus {
 
 #sidebar ul.components {
   padding: 20px 0;
-  border-bottom: 1px solid #aab895;
+  border-bottom: 1px solid #195905;
 }
 
 #sidebar ul p {
@@ -93,7 +99,7 @@ a:focus {
   display: block;
 }
 #sidebar ul li a:hover {
-  color: #aab895;
+  color: #195905;
   background: #fff;
 }
 
